--- a/ansible_templates/dev_dataspects_rails_container.sh.j2
+++ b/ansible_templates/dev_dataspects_rails_container.sh.j2
@@ -1,14 +1,14 @@
 docker run \
   --name dataspects_rails \
   --network dataspectsstandardsystem_default \
-  --ip 172.21.0.97 \
   --publish 3000:3000 \
   --env SIDEKIQ_UI_USERNAME=none \
   --env SIDEKIQ_UI_PASSWORD=none \
   --env API_KEY=none \
   --env REDIS_URL=redis://redis:6379/12 \
-  --volume $(pwd)/dataspects_lib:/usr/src/dataspects_lib \
-  --volume $(pwd)/dataspects_api:/usr/src/dataspects_api \
+  --env DATASPECTS_SEARCH_CONFIG_FILE=/usr/src/dataspectsSearch_config.yml \
+  --env DATASPECTS_PLUGINS_FOLDER=/usr/src \
+  --volume ${PWD}:/usr/src \
   --workdir /usr/src/dataspects_api \
   --rm \
   -it \
