--- a/ansible_templates/dev_dataspects_sidekiq_container.sh.j2
+++ b/ansible_templates/dev_dataspects_sidekiq_container.sh.j2
@@ -1,12 +1,12 @@
 docker run \
   --name dataspects_sidekiq \
   --network dataspectsstandardsystem_default \
-  --ip 172.21.0.96 \
   --env REDIS_URL=redis://redis:6379/12 \
   --rm \
   -it \
-  --volume $(pwd)/dataspects_lib:/usr/src/dataspects_lib \
-  --volume $(pwd)/dataspects_api:/usr/src/dataspects_api \
+  --env DATASPECTS_SEARCH_CONFIG_FILE=/usr/src/dataspectsSearch_config.yml \
+  --env DATASPECTS_PLUGINS_FOLDER=/usr/src \
+  --volume ${PWD}:/usr/src \
   --workdir /usr/src/dataspects_api \
     dataspects/dataspects:{{ dataspects_version }} \
       sidekiq -e development
